--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,19 +3,55 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Project!{% endblock %}</title>
-        <link rel="stylesheet" href="{{ asset('css/style.css') }}">
-        {% block stylesheets %}{% endblock %} {# Ne sert pas car une seule feuille de style #}
+        {% block stylesheets %}
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <link href="css/slider.css" rel="stylesheet">
+            <!--[if lt IE 9]><link href="{{ asset('css/ie8.css') }}" rel="stylesheet"><![endif]-->
+            <!--[if lt IE 8]><link href="{{ asset('css/ie7.css') }}" rel="stylesheet"><![endif]-->
+        {% endblock %}
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('ico/apple-touch-icon.png') }}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('ico/favicon-32x32.png') }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('ico/favicon-16x16.png') }}">
+        <link rel="manifest" href="{{ asset('ico/site.webmanifest') }}">
+        <link rel="mask-icon" href="{{ asset('ico/safari-pinned-tab.svg"') }} " color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#2d89ef">
+        <meta name="theme-color" content="#ffffff">
     </head>
     <body>
         <header>
-            {% block header %}header{% endblock %}
+            {% block header %}
+            <div id="titre" class = "center">
+                <h1 id="home-btn">Share Clouds</h1>
+            </div>
+            {% endblock %}
         </header>
         <section>
             {% block body %}body{% endblock %}
         </section>
         <footer>
-            {% block footer %}footer{% endblock %}
+            {% block footer %}
+            <div id="footer">
+                <div id="footer1" class="flex">
+                    <button id="take-picture-btn" class="button-big center">Prendre une Photo</button>
+                </div>
+                <div id="footer2" class="flex">
+                    <button id="album-btn" class="button-small">Galerie des nuages</button>
+                    <button id="map-btn" class="button-small">Carte des nuages</button>
+                </div>
+                <div id="footer3" class = "center">Tous droits réservés - </div>
+            </div>
+            {% endblock %}
         </footer>
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+            <script src="{{ asset('js/jquery-1.10.2.min.js') }}"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            <script src="{{ asset('js/script.js') }}" type="text/javascript"></script>
+            <script src="{{ asset('js/jquery.sldr.js') }}"></script>
+            <script src="{{ asset('js/slider-config.js') }}"></script>
+
+
+
+        {% endblock %}
     </body>
 </html>
