--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,58 @@
 {% block title %}Hello {{ controller_name }}!{% endblock %}
 
 {% block body %}
-<div class="home">
-    home body
+<div id="home">
+    <div id="home1" class="stage">
+        <div id="SLDR-ONE" class="sldr">
+            <ul class="wrp animate">
+                <li class="elmnt-one"><div class="skew"><div class="wrap"><img src="../public/img/Lake.jpg" width="1000" height="563"></div></div></li>
+                <li class="elmnt-two"><div class="skew"><div class="wrap"><img src="../public/img/Mountain-Range.jpg" width="1000" height="563"></div></div></li>
+                <li class="elmnt-three"><div class="skew"><div class="wrap"><img src="../public/img/Mt-Fuji.jpg" width="1000" height="563"></div></div></li>
+                <li class="elmnt-four"><div class="skew"><div class="wrap"><img src="../public/img/Pink-Forest.jpg" width="1000" height="563"></div></div></li>
+            </ul>
+        </div>
+
+        <div class="clear"></div>
+
+        <div class="captions">
+            <div class="focalPoint"><p><small>Lake</small></p></div>
+            <div><p><small>Mountain Range</small></p></div>
+            <div><p><small>Mt. Fuji</small></p></div>
+            <div><p><small>Pink Forest</small></p></div>
+        </div>
+
+        <ul class="selectors">
+            <li class="focalPoint"><a href="">•</a></li><li><a href="">•</a></li><li><a href="">•</a></li><li><a href="">•</a></li>
+        </ul>
+
+    </div>
+
 </div>
+
+
+<div id="take-picture" class="center">
+    vue miniature de la photo
+    champs tire, commentaire
+    +bouton ajouter
+</div>
+
+
+<div id="map" class="center">
+    carte avec les photos prises
+</div>
+
+
+<div id="album" class="center">
+    vue album photo avec filtres
+</div>
+
+
+<div id="detail" class="center">
+    photo grand format
+    titre
+    commentaires etc
+</div>
+
 {% endblock %}
+
+
